Add version.[ch] to the appropriate source lists.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -445,14 +445,14 @@ set_source_files_properties(${CMAKE_CURRENT_BINARY_DIR}/grammar.c PROPERTIES
 #
 #set(PROJECT_SOURCE_LIST_C ${PROJECT_SOURCE_LIST_C} ${CMAKE_CURRENT_BINARY_DIR}/grammar.c)
 
-if (WIN32)
+if( WIN32 )
     add_custom_command(
         OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/version.h
         SOURCE ${pcap_SOURCE_DIR}/VERSION ${pcap_SOURCE_DIR}/version.h.in
         COMMAND ${pcap_SOURCE_DIR}/GenVersion.bat ${pcap_SOURCE_DIR}/VERSION ${pcap_SOURCE_DIR}/version.h.in ${CMAKE_CURRENT_BINARY_DIR}/version.h
         DEPENDS ${pcap_SOURCE_DIR}/VERSION ${pcap_SOURCE_DIR}/version.h.in
     )
-else()
+else( WIN32 )
     add_custom_command(
         OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/version.c
         SOURCE ${pcap_SOURCE_DIR}/VERSION
@@ -477,8 +477,8 @@ else()
     #
     # Add version.c to the list of sources.
     #
-    #set(PROJECT_SOURCE_LIST_C ${PROJECT_SOURCE_LIST_C} ${CMAKE_CURRENT_BINARY_DIR}/version.c)
-endif()
+    set(PROJECT_SOURCE_LIST_C ${PROJECT_SOURCE_LIST_C} ${CMAKE_CURRENT_BINARY_DIR}/version.c)
+endif( WIN32 )
 
 #
 # Since version.h does not exists yet when cmake is run, mark
@@ -491,7 +491,7 @@ set_source_files_properties(${CMAKE_CURRENT_BINARY_DIR}/version.h PROPERTIES
 #
 # Add version.h to the list of headers.
 #
-#set(PROJECT_SOURCE_LIST_H ${PROJECT_SOURCE_LIST_H} ${CMAKE_CURRENT_BINARY_DIR}/version.h)
+set(PROJECT_SOURCE_LIST_H ${PROJECT_SOURCE_LIST_H} ${CMAKE_CURRENT_BINARY_DIR}/version.h)
 
 source_group("Source Files" FILES ${PROJECT_SOURCE_LIST_C})
 source_group("Header Files" FILES ${PROJECT_SOURCE_LIST_H})
@@ -504,9 +504,7 @@ add_library(${LIBRARY_NAME}
     ${PROJECT_SOURCE_LIST_C}
     ${CMAKE_CURRENT_BINARY_DIR}/grammar.c
     ${CMAKE_CURRENT_BINARY_DIR}/scanner.c
-    ${CMAKE_CURRENT_BINARY_DIR}/version.c
     ${PROJECT_SOURCE_LIST_H}
-    ${CMAKE_CURRENT_BINARY_DIR}/version.h
 )
 
 if( WIN32 )
