Require that version.h be generated.
All build procedures we support generate version.h (autoconf, CMake,
MSVC), so always include it.  Get rid of all definitions of
HAVE_VERSION_H, as we're not checking it any more.

--- a/msdos/makefile.dj
+++ b/msdos/makefile.dj
@@ -18,7 +18,7 @@ include ./msdos/common.dj
 DRIVER_DIR = ./msdos/pm_drvr
 
 CFLAGS += -DDEBUG -DNDIS_DEBUG -DHAVE_LIMITS_H -DHAVE_STRERROR -DHAVE_SNPRINTF -DHAVE_VSNPRINTF\
-          -D_U_='__attribute__((unused))' -DHAVE_VERSION_H
+          -D_U_='__attribute__((unused))'
 
 CFLAGS += -Dyylval=pcap_lval # -DBDEBUG -DNDEBUG
 
