--- a/Makefile.in
+++ b/Makefile.in
@@ -342,6 +342,7 @@ EXTRA_DIST = \
 	pcap-usb-linux.h \
 	pcap-win32.c \
 	scanner.l \
+	version.h.in \
 	Win32/Include/Gnuc.h \
 	Win32/Include/net/if.h \
 	Win32/Prj/wpcap.sln \
