--- a/.gitignore
+++ b/.gitignore
@@ -41,12 +41,12 @@ pcap_open_dead.3pcap
 pcap_open_offline.3pcap
 pcap_set_tstamp_precision.3pcap
 pcap_set_tstamp_type.3pcap
+pcap_version.h
 scanner.c
 scanner.c.bottom
 scanner.h
 selpolltest
 version.c
-version.h
 *.log
 *.tlog
 *.obj
