--- a/pcap.3pcap.in
+++ b/pcap.3pcap.in
@@ -244,7 +244,7 @@ that device.  A user can be given that privilege by, for example, adding
 that privilege to the user's
 .B defaultpriv
 key with the
-.B usermod (1M)
+.B usermod (@MAN_USERMOD_SECTION@)
 command.
 .TP
 .B Under HP-UX with DLPI:
@@ -915,7 +915,7 @@ script or some other configuration script to check whether the libpcap
 1.0 APIs are available and use them only if they are.
 .SH SEE ALSO
 autoconf(1), tcpdump(1), tcpslice(1), pcap-filter(@MAN_MISC_INFO@), pfconfig(8),
-usermod(1M)
+usermod(@MAN_USERMOD_SECTION@)
 .SH AUTHORS
 The original authors of libpcap are:
 .LP
