--- a/Makefile.in
+++ b/Makefile.in
@@ -733,6 +733,9 @@ distclean: clean
 	rm -f $(MAN3PCAP_EXPAND:.in=) $(MANFILE:.in=) $(MANMISC:.in=)
 	rm -rf autom4te.cache
 
+extags: $(TAGFILES)
+	ctags $(TAGFILES)
+
 tags: $(TAGFILES)
 	ctags -wtd $(TAGFILES)
 
