--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,11 +24,13 @@ if( WIN32 )
 endif( WIN32 )
 
 #
-# XXX - this should be an option, defaulting to "yes" for Windows and to
-# "no", for now, on UN*X.
+# Default to having remote capture support on Windows and, for now, to
+# not having it on UN*X.
 #
 if( WIN32 )
-    set( HAVE_REMOTE 1 )
+    option (HAVE_REMOTE "Enable remote capture" ON)
+else
+    option (HAVE_REMOTE "Enable remote capture" OFF)
 endif( WIN32 )
 
 ######################################
