Clean up man page sections.
Instead of pointing to an "ethers" file-format man page for the format
of MAC addresses, just give the formats we support in the man page -
it's our code, so we, not the OS vendor, control the formats.

Default the section with usermod to section 8, as Solaris 2.12 isn't out
yet.

--- a/pcap-filter.manmisc.in
+++ b/pcap-filter.manmisc.in
@@ -181,9 +181,10 @@ be checked for a match.
 .IP "\fBether dst \fIehost\fP"
 True if the Ethernet destination address is \fIehost\fP.
 \fIEhost\fP
-may be either a name from /etc/ethers or a number (see
-.IR ethers (@MAN_ETHERS_SECTION@)
-for numeric format).
+may be either a name from /etc/ethers or a numerical MAC address of the
+form "xx:xx:xx:xx:xx:xx", "xx.xx.xx.xx.xx.xx", "xx-xx-xx-xx-xx-xx",
+"xxxx.xxxx.xxxx", "xxxxxxxxxxxx", or various mixes of ':', '.', and '-',
+where each "x" is a hex digit (0-9, a-f, or A-F).
 .IP "\fBether src \fIehost\fP"
 True if the Ethernet source address is \fIehost\fP.
 .IP "\fBether host \fIehost\fP"
