Move code from fad-helpers.c to pcap.c.
Other helpers for pcap modules are in pcap.c; move those there as well.

--- a/Makefile.in
+++ b/Makefile.in
@@ -82,7 +82,7 @@ YACC = @YACC@
 PSRC =	pcap-@V_PCAP@.c @USB_SRC@ @BT_SRC@ @BT_MONITOR_SRC@ @NETFILTER_SRC@ @DBUS_SRC@
 FSRC =  @V_FINDALLDEVS@
 SSRC =  @SSRC@
-CSRC =	pcap.c inet.c fad-helpers.c gencode.c optimize.c nametoaddr.c \
+CSRC =	pcap.c inet.c gencode.c optimize.c nametoaddr.c \
 	etherent.c savefile.c sf-pcap.c sf-pcap-ng.c pcap-common.c \
 	bpf_image.c bpf_dump.c
 GENSRC = scanner.c grammar.c bpf_filter.c version.c
@@ -273,7 +273,6 @@ EXTRA_DIST = \
 	fad-getad.c \
 	fad-gifc.c \
 	fad-glifc.c \
-	fad-helpers.c \
 	gen_version_c.sh \
 	gen_version_header.sh \
 	grammar.y \
