--- a/pcap.3pcap.in
+++ b/pcap.3pcap.in
@@ -930,8 +930,9 @@ The current version is available from "The Tcpdump Group"'s Web site at
 .I http://www.tcpdump.org/
 .RE
 .SH BUGS
-Please send problems, bugs, questions, desirable enhancements, etc. to:
+To report a security issue please send an e-mail to security@tcpdump.org.
 .LP
-.RS
-tcpdump-workers@lists.tcpdump.org
-.RE
+To report bugs and other problems, contribute patches, request a
+feature, provide generic feedback etc please see the file
+.I CONTRIBUTING
+in the libpcap source tree root.
