Put rpcap protocol definitions into rpcap/rpcap-protocol.h.
This is a cleanup in the process of adding the rpcap server to the
project.

--- a/Makefile.in
+++ b/Makefile.in
@@ -125,6 +125,7 @@ HDR = $(PUBHDR) \
 	pcap-stdinc.h \
 	portability.h \
 	ppp.h \
+	rpcap/rpcap-protocol.h \
 	sf-pcap.h \
 	sf-pcap-ng.h \
 	sunatmpos.h
