Support pcap_breakloop() for rpcap.
While we're at it, make rpcapd depend on libpcap.a, as we link with it.

--- a/rpcap/Makefile.in
+++ b/rpcap/Makefile.in
@@ -98,7 +98,7 @@ EXTRA_DIST = \
 	Makefile.in \
 	Makefile-devel-adds
 
-rpcapd: $(OBJ)
+rpcapd: $(OBJ) ../libpcap.a
 	$(CC) -o $@ $(OBJ) ../libpcap.a
 clean:
 	rm -f $(CLEANFILES)
