--- a/Makefile.in
+++ b/Makefile.in
@@ -63,6 +63,7 @@ V_RPATH_OPT = @V_RPATH_OPT@
 DEPENDENCY_CFLAG = @DEPENDENCY_CFLAG@
 PROG=libpcap
 RPCAPD=@RPCAPD@
+INSTALL_RPCAPD=@INSTALL_RPCAPD@
 
 # Standard CFLAGS
 FULL_CFLAGS = $(CCOPT) $(INCLS) $(DEFS) $(CFLAGS)
@@ -565,7 +566,7 @@ selpolltest: tests/selpolltest.c libpcap.a
 valgrindtest: tests/valgrindtest.c libpcap.a
 	$(CC) $(FULL_CFLAGS) -I. -L. -o valgrindtest $(srcdir)/tests/valgrindtest.c libpcap.a $(LIBS)
 
-install: install-shared install-archive pcap-config
+install: install-shared install-archive pcap-config @INSTALL_RPCAPD@
 	[ -d $(DESTDIR)$(libdir) ] || \
 	    (mkdir -p $(DESTDIR)$(libdir); chmod 755 $(DESTDIR)$(libdir))
 	[ -d $(DESTDIR)$(includedir) ] || \
@@ -636,7 +637,6 @@ install: install-shared install-archive pcap-config
 	for i in $(MANMISC); do \
 		$(INSTALL_DATA) `echo $$i | sed 's/.manmisc.in/.manmisc/'` \
 		    $(DESTDIR)$(mandir)/man@MAN_MISC_INFO@/`echo $$i | sed 's/.manmisc.in/.@MAN_MISC_INFO@/'`; done
-	cd rpcap; $(MAKE) DESTDIR=$(DESTDIR) install
 
 install-shared: install-shared-$(DYEXT)
 install-shared-so: libpcap.so
@@ -687,7 +687,10 @@ install-archive-shareda:
 	# library on AIX.
 	#
 
-uninstall: uninstall-shared
+install-rpcapd:
+	cd rpcap; $(MAKE) DESTDIR=$(DESTDIR) install
+
+uninstall: uninstall-shared uninstall-rpcapd
 	rm -f $(DESTDIR)$(libdir)/libpcap.a
 	for i in $(PUBHDR); do \
 		rm -f $(DESTDIR)$(includedir)/$$i; done
@@ -739,8 +742,12 @@ uninstall-shared-shareda:
 	rm -f $(DESTDIR)$(libdir)/libpcap.a
 uninstall-shared-none:
 
+uninstall-rpcapd:
+	cd rpcap; $(MAKE) DESTDIR=$(DESTDIR) uninstall
+
 clean:
 	rm -f $(CLEANFILES)
+	cd rpcap; $(MAKE) clean
 
 distclean: clean
 	rm -f Makefile config.cache config.log config.status \
@@ -748,6 +755,7 @@ distclean: clean
 	    stamp-h stamp-h.in
 	rm -f $(MAN3PCAP_EXPAND:.in=) $(MANFILE:.in=) $(MANMISC:.in=)
 	rm -rf autom4te.cache
+	cd rpcap; $(MAKE) distclean
 
 extags: $(TAGFILES)
 	ctags $(TAGFILES)
@@ -767,4 +775,3 @@ releasetar:
 depend:	$(GENSRC) $(GENHDR) bpf_filter.c
 	$(MKDEP) -c $(CC) -m $(CFLAGS) $(DEPENDENCY_CFLAG) $(DEFS) $(INCLS) $(SRC)
 	cd rpcap; $(MAKE) depend
-
