--- a/configure.ac
+++ b/configure.ac
@@ -1858,5 +1858,5 @@ AC_OUTPUT(Makefile pcap-filter.manmisc pcap-linktype.manmisc
 	pcap_get_tstamp_precision.3pcap pcap_list_datalinks.3pcap
 	pcap_list_tstamp_types.3pcap pcap_open_dead.3pcap
 	pcap_open_offline.3pcap pcap_set_tstamp_precision.3pcap
-	pcap_set_tstamp_type.3pcap rpcap/Makefile)
+	pcap_set_tstamp_type.3pcap rpcapd/Makefile)
 exit 0
