Allow a platform to add information to the version string.
For example, on Linux, we add information about memory-mapped capture
support; see comments on GitHub issue #600.

--- a/pcap_version.h.in
+++ b/pcap_version.h.in
@@ -9,5 +9,8 @@
  * being the one from the version of the library with which the program
  * was linked, or even weirder things, such as the string being the one
  * from the library but being truncated).
+ *
+ * In addition, we may add additional information to this string, so
+ * pcap_lib_version() might not return this string alone anyway.
  */
 static const char pcap_version_string[] = "libpcap version %%LIBPCAP_VERSION%%";
