--- a/Makefile.in
+++ b/Makefile.in
@@ -231,6 +231,7 @@ MAN3PCAP_NOEXPAND = \
 	pcap_set_datalink.3pcap \
 	pcap_set_immediate_mode.3pcap \
 	pcap_set_promisc.3pcap \
+	pcap_set_protocol.3pcap \
 	pcap_set_rfmon.3pcap \
 	pcap_set_snaplen.3pcap \
 	pcap_set_timeout.3pcap \
