Give URL of the mail message giving the fake-target suggestion.
(The URL in Kitware's own archives, not in Nabble's archives.)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -517,6 +517,10 @@ source_group("Header Files" FILES ${PROJECT_SOURCE_LIST_H})
 #
 # Special target to serialize the building of the generated source.
 #
+# See
+#
+#  http://public.kitware.com/pipermail/cmake/2013-August/055510.html
+#
 add_custom_target(SerializeTarget
     DEPENDS
     ${CMAKE_CURRENT_BINARY_DIR}/grammar.c
