--- a/Makefile.in
+++ b/Makefile.in
@@ -83,13 +83,7 @@ YACC = @YACC@
 	@rm -f $@
 	$(CC) $(FULL_CFLAGS) -c $(srcdir)/$*.c
 
-PSRC =	pcap-@V_PCAP@.c \
-	@USB_SRC@ \
-	@BT_SRC@ \
-	@BT_MONITOR_SRC@ \
-	@NETFILTER_SRC@ \
-	@DBUS_SRC@ \
-	@NETMAP_SRC@
+PSRC =	pcap-@V_PCAP@.c @USB_SRC@ @BT_SRC@ @BT_MONITOR_SRC@ @NETFILTER_SRC@ @DBUS_SRC@ @NETMAP_SRC@
 FSRC =  @V_FINDALLDEVS@
 SSRC =  @SSRC@
 CSRC =	pcap.c inet.c gencode.c optimize.c nametoaddr.c \
