Split Win32 initialization code into pcap-win32.c

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -200,6 +200,7 @@ set(PROJECT_SOURCE_LIST_C
 )
 
 if( WIN32 )
+    set(PROJECT_SOURCE_LIST_C ${PROJECT_SOURCE_LIST_C} pcap-win32.c )
     set(PROJECT_SOURCE_LIST_C ${PROJECT_SOURCE_LIST_C} missing/win_snprintf.c )
 else()
     if( NOT HAVE_SNPRINTF )
