Put the stuff to get the sized integer types defined into pcap-types.h.
Have pcap-types.h arrange to define the intN_t/u_intN_t types, and the
INTn_MAX/UINTn_MAX values, on all platforms, and use it wherever it's
appropriate.

Include it up front in scanner.l, to avoid redefinitions of the
INTn_MAX/UINTn_MAX types.

--- a/Makefile.in
+++ b/Makefile.in
@@ -130,6 +130,7 @@ HDR = $(PUBHDR) \
 	pcap-int.h \
 	pcap-rpcap.h \
 	pcap-stdinc.h \
+	pcap-types.h \
 	portability.h \
 	ppp.h \
 	rpcap-protocol.h \
